# xr-ar-space

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.json
.run/: Build Release.run.xml  Build and Run.run.xml  Configure (CMake).run.xml  Run App.run.xml  Run Tests.run.xml
docs/: sound-notifications.md
shaders/: cursor.frag  cursor.vert  screen.frag  screen.vert
src/: main.cpp
src/app/: App.cpp  App.h  Config.h
src/capture/: CaptureSource.h  CaptureTexture.cpp  CaptureTexture.h  FrameBuffer.h  WinRTCapturer.cpp  WinRTCapturer.h  WindowCapturer.cpp  WindowCapturer.h  WindowEnumerator.cpp  WindowEnumerator.h
src/display/: DisplayDetector.cpp  DisplayDetector.h  VirtualDisplay.cpp  VirtualDisplay.h  WindowPositioner.cpp  WindowPositioner.h
src/hid/: ImuProtocol.h  ImuReader.cpp  ImuReader.h
src/interaction/: InputInjector.cpp  InputInjector.h  Raycaster.h
src/layout/: LayoutManager.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VirtualScreen.cpp  VirtualScreen.h
src/tracking/: HeadTracker.cpp  HeadTracker.h  SensorFusion.h
src/ui/: HelpOverlay.h  SettingsPanel.cpp  SettingsPanel.h  UIManager.cpp  UIManager.h  WindowPicker.cpp  WindowPicker.h
src/util/: ConfigFile.cpp  ConfigFile.h  Log.h  MathUtils.h  Timer.h
tests/: test_layout.cpp  test_math_utils.cpp  test_raycaster.cpp  test_sensor_fusion.cpp
